--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helloapp",
   "version": "1.0.0",
   "description": "node app ",
-  "main": "hello_app.js",
+  "main": "hello.js",
   "scripts": {
   "start": "node hello.js"
 },
